Start parsing part

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                 <div class="user small" data-users="1"></div>
             </div>
         </div>
-        <div id="objectStorageWrapper">
-            <div class="objectStorage west_america"></div>
-            <div class="objectStorage east_america"></div>
-            <div class="objectStorage germany"></div>
-            <div class="objectStorage singapore"></div>
+        <div id="serverWrapper">
+            <div class="server west_america"></div>
+            <div class="server east_america"></div>
+            <div class="server germany"></div>
+            <div class="server singapore"></div>
         </div>
         <div id="usersDeviceWrapper">
             <div class="usersDevice_container north_america" data-continent="north_america">
